audit(spring): closes the in-scope audit at 230/230 — 21 fabricated attributions in 14 files
Units 273-275: all 14 files in spring/case_studies (9 case studies, 4 cross_cutting, README).
Every file corrected. The agent pulled the real jars (Boot 4.1.0, Framework 7.0.8, Security
7.1.0, Hibernate 7.4.1, spring-kafka 4.1.0, Batch 6.0.4, Gateway 5.0.2, Resilience4j 2.3.0,
reactor-netty, Testcontainers 2.0.5) and compiled and ran snippets on JDK 25.0.1.

THE ASSIGNED DEFECT, design_multitenant_api.md:381. javac --release 25 --enable-preview:
    error: cannot find symbol
            try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
      symbol: class ShutdownOnFailure
Replaced with StructuredTaskScope.open(Joiner.<Void>awaitAllSuccessfulOrThrow()) and a plain
join(), then COMPILED AND EXECUTED: "migrated acme -> tenant_acme on VirtualThread[#28]".
javap also corrected my own brief — the joiner is anySuccessfulResultOrThrow, not
anySuccessfulOrThrow as I had written it. §7 now says "preview API: JEP 505 Java 25, JEP 525
Java 26" instead of "Java 21 GA, JEP 453".

NINE DEFECTS PROVEN BY COMPILING OR RUNNING, two of which change behaviour silently:
  - @GetMapping and @PostMapping on ONE method: Spring logs a WARN that "only the first will
    be used" and maps GET only, so every POST hitting the circuit breaker got 405 instead of
    the fallback the case study was demonstrating.
  - TRANSACTIONAL_ID_CONFIG set, then a plain kafkaTemplate.send():
    IllegalStateException: No transaction is in process — the outbox would never publish.
  - new DaoAuthenticationProvider() + setUserDetailsService (2 compile errors; Security 7 has
    only the (UserDetailsService) constructor); HttpServletResponse.SC_TOO_MANY_REQUESTS
    (not in the SC_* set — it predates RFC 6585); WebSocketSession.isWritePossible() (does
    not exist); ContextPropagatingTaskDecorator returned as an Executor (wrong type AND wrong
    constructor arg); RetriableKafkaException (no such class); 